--- a/hw1/.gitignore
+++ b/hw1/.gitignore
@@ -66,7 +66,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-.gitignore
+#.gitignore
 .idea/inspectionProfiles/
 .idea/misc.xml
 .idea/modules.xml
