--- a/hw2/.gitignore
+++ b/hw2/.gitignore
@@ -82,3 +82,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 .idea/hw2.iml
+/.directory
+nb-dev.preds
+nb-test.preds
